--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,6 @@ format:
     css: styles.css
     code-overflow: wrap
     code-line-numbers: true
-
-
-
+    toc: true
+    toc-depth: 2
+    toc-location: left
